<resources>
    <string name="select" translatable="false">select</string>

    <string name="app_name">Coin Tester</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.\n\n   Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.\n\n   Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo.\n Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, \n\n Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.\n\n   Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.\n\n   Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo.\n Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,</string>
    <string name="coins">COINS</string>
    <string name="checker">CHECKER</string>
    <string name="help">HELP</string>
    <string name="datasheet">Datasheet</string>
    <string name="select_email_sending_app">Select Email Sending App</string>
    <string name="visit_web">Visit web</string>
    <string name="tutorial">Tutorial</string>
    <string name="developed_by">Developed by</string>

    <!-- Analyzer -->
    <string name="preferences">Preferences</string>

    <!-- Main UI -->
    <string name="tv_rms_text">RMS:dB \n-XXX.X</string>
    <string name="tv_marker_text" >Marker:XXXXX.XHz(AX#+XX) -XXX.XdB</string>
    <string name="tv_marker_text_empty">Marker:</string>
    <string name="tv_peak_text">Peak&#160;&#160;:XXXXX.XHz(AX#+XX) -XXX.XdB</string>
    <string name="tv_peak_text_empty">Peak&#160;&#160;:</string>
    <string name="tv_rec_text">Rec: 00:00:00.0, Remain: 0000:00:00</string>
    <string name="tv_rec_text_empty">Rec:</string>
    <string name="tv_rec_remain_text">", Remain: "</string>
    <string name="tv_linear_log_note">linear::log::note</string>
    <string name="tv_run_stop">run::stop</string>
    <string name="tv_dB_dBA">dB::dBA</string>
    <string name="tv_spectrum_spectrogram_mode">1D::2D</string>
    <string name="tv_monitor_record">Mon::Rec</string>
    <string name="title_samples_s">SAMPLES / S::0</string>
    <string name="title_fft_length">FFT LENGTH::0</string>
    <string name="title_fft_average">N AVERAGE::0</string>

    <!-- permission dialog -->
    <string name="permission_explanation_title">Permission denied</string>
    <string name="permission_explanation_recorder">This app analyze the sound heard by *this* device. A permission of using microphone is required.</string>

    <!-- Ranges Dialog -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="set_lower_and_upper_freq_bound">"Set Lower and Upper Frequency Bound"</string>
    <string name="ranges_freq_from_to">"[%1$.2f &lt;= Hz &lt;= %2$.2f]"</string>
    <string name="set_lower_and_upper_db_bound">"Set Lower and Upper dB Bound"</string>
    <string name="ranges_db_from_to">"[%1$.2f &lt;= dB &lt;= %2$.2f]"</string>
    <string name="lock_ranges">Lock Ranges</string>
    <string name="load_previous">Load Previous</string>

    <!-- Menus -->
    <string name="menu_main_about">About</string>
    <string name="menu_main_contact">Contact</string>
    <string name="menu_main_user_manual">User Manual</string>
    <string name="menu_main_preferences">Preferences</string>
    <string name="menu_main_audio_sources_checker">Audio Sources Checker</string>
    <string name="menu_main_ranges">Ranges</string>
    <string name="menu_main_calibration">Calibration</string>

    <string name="menu_audio_sources_checker_standard_sources">Standard Sources</string>
    <string name="menu_audio_sources_checker_supported_sources">Supported Sources</string>
    <string name="menu_audio_sources_checker_all_sources">All Sources</string>

    <!-- Audio Sources Checker -->
    <string name="checking_audio_record_properties">Checking AudioRecord properties…</string>
    <string name="info_of_input_audio">Info of Input Audio</string>
    <string name="checker_latency_indication">"(Only check MONO, 16BIT format)\n"</string>
    <string name="checker_latency_header">"\nSampleRate MinBuf     (Time)\n"</string>
    <string name="checker_latency_row">"%1$6d Hz  %2$4d Bytes (%3$4.1f ms)\n"</string>
    <string name="checker_latency_error">" Hz  ERROR\n"</string>
    <string name="checker_sources_indication">"\n--- Audio Source Checking ---\n"</string>
    <string name="checker_sources_header">"\nSource: %1$s\n"</string>
    <string name="checker_sources_freq">"%1$6d Hz  "</string>
    <string name="checker_sources_succeed">"Succeed"</string>
    <string name="checker_sources_error_illegal_argument">"Illegal Argument"</string>
    <string name="checker_sources_error_read_0_byte">"Read 0 byte"</string>
    <string name="checker_sources_error_read_sample">"Fail to read sample"</string>
    <string name="checker_sources_error_initialization">"Fail to initialize"</string>
    <string name="checker_sources_alter_header">"(source alter: %1$s)"></string>
    <string name="checker_sources_end">"\n"</string>

    <!-- Preferences -->
    <string name="preferences_general_settings">General Settings</string>
    <string name="preferences_keep_screen_on_title">Keep screen on</string>
    <string name="preferences_keep_screen_on_text">Prevent display from turning off</string>
    <string name="preferences_audio_source_title">Audio source</string>
    <string name="preferences_audio_source_text">Audio source for spectrum</string>
    <string name="preferences_window_function_title">Window Function</string>
    <string name="preferences_windowFunction_text">Window function for (local) short-time Fourier transform (STFT)</string>
    <string name="preferences_window_overlap_title">Time window overlap</string>
    <string name="preferences_window_overlap_text">Higher percentage for finer time resolution, lower to save CPU</string>
    <string name="preferences_spectrum_appearance">Spectrum Appearance</string>
    <string name="preferences_show_lines_title">Spectrum uses lines</string>
    <string name="preferences_show_lines_text">Use lines instead of bars (area) for spectrum</string>
    <string name="preferences_spectrum_range_title">Spectrum range scale</string>
    <string name="preferences_spectrum_range_text">Show range of spectrum in dB scale</string>
    <string name="preferences_spectrogram_appearance">Spectrogram Appearance</string>
    <string name="preferences_spectrogram_shifting_title">Spectrogram shifting</string>
    <string name="preferences_spectrogram_shifting_text">The whole spectrogram shifts on a rolling basis over time</string>
    <string name="preferences_spectrogram_time_axis_title">Show time axis</string>
    <string name="preferences_spectrogram_time_axis_text">Turns on/off time axis label</string>
    <string name="preferences_spectrogram_show_freq_along_x_title">Frequency as X axis</string>
    <string name="preferences_spectrogram_show_freq_along_x_text">So time axis is Y axis</string>
    <string name="preferences_spectrogram_smooth_render_title">Smooth render</string>
    <string name="preferences_spectrogram_smooth_render_text">Smoothly render the spectrogram</string>
    <string name="preferences_spectrogram_color_map_title">Color Map</string>
    <string name="preferences_spectrogram_color_map_text">Choose color of dB to map</string>
    <string name="preferences_spectrogram_range_title">Spectrogram range</string>
    <string name="preferences_spectrogram_range_text">Show range of spectrogram in dB scale</string>
    <string name="preferences_spectrogram_duration_title">Spectrogram duration</string>
    <string name="preferences_spectrogram_duration_text">Show duration of spectrogram (when average number is set to 1)</string>
    <string name="preferences_spectrogram_fps_title">Limit Refresh rate</string>
    <string name="preferences_spectrogram_fps_text">Higher for smoother graphic, lower to save battery.</string>
    <string name="preferences_miscellaneous">Miscellaneous</string>
    <string name="preferences_warn_overrun_title">Overrun Warning</string>
    <string name="preferences_warn_overrun_text">Show warning if audio buffer enters overrun state</string>
    <string name="preferences_developer_setting">Developer Settings</string>
    <string name="preferences_spectrogram_log_plot_title">Log plot: replot on zoom</string>
    <string name="preferences_spectrogram_log_plot_text">Replot spectrogram only while zooming (saves battery)</string>

    <!-- Mode -->
    <string name="linear">linear</string>
    <string name="log">log</string>
    <string name="note">note</string>
    <string-array name="mode">
        <item>@string/linear</item>
        <item>@string/log</item>
        <item>@string/note</item>
    </string-array>

    <string name="stuck_tab">Stuck Tab</string>
</resources>