<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="generalSettingsBar"
        android:title="@string/preferences_general_settings">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="keepScreenOn"
            android:summary="@string/preferences_keep_screen_on_text"
            android:title="@string/preferences_keep_screen_on_title"/>
        <ListPreference
            android:defaultValue="@string/audio_sources_default"
            android:entries="@array/audio_sources_entries"
            android:entryValues="@array/audio_source_ids"
            android:key="audioSource"
            android:summary="@string/preferences_audio_source_text"
            android:title="@string/preferences_audio_source_title"/>
        <ListPreference
            android:defaultValue="@string/window_functions_default"
            android:entries="@array/window_functions"
            android:entryValues="@array/window_functions"
            android:key="windowFunction"
            android:summary="@string/preferences_windowFunction_text"
            android:title="@string/preferences_window_function_title"/>
        <ListPreference
            android:defaultValue="@string/fft_overlap_percentages_default"
            android:entries="@array/fft_overlap_percentages_entries"
            android:entryValues="@array/fft_overlap_percentages"
            android:key="fft_overlap_percent"
            android:summary="@string/preferences_window_overlap_text"
            android:title="@string/preferences_window_overlap_title"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="spectrumAppearance"
        android:title="@string/preferences_spectrum_appearance">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="showLines"
            android:summary="@string/preferences_show_lines_text"
            android:title="@string/preferences_show_lines_title"/>

        <ListPreference
            android:defaultValue="@string/db_ranges_spectrum_default"
            android:entries="@array/db_ranges"
            android:entryValues="@array/db_ranges"
            android:key="spectrumRange"
            android:summary="@string/preferences_spectrum_range_text"
            android:title="@string/preferences_spectrum_range_title"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="spectrogramAppearance"
        android:title="@string/preferences_spectrogram_appearance">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="spectrogramShifting"
            android:summary="@string/preferences_spectrogram_shifting_text"
            android:title="@string/preferences_spectrogram_shifting_title"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="spectrogramTimeAxis"
            android:summary="@string/preferences_spectrogram_time_axis_text"
            android:title="@string/preferences_spectrogram_time_axis_title"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="spectrogramShowFreqAlongX"
            android:summary="@string/preferences_spectrogram_show_freq_along_x_text"
            android:title="@string/preferences_spectrogram_show_freq_along_x_title"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="spectrogramSmoothRender"
            android:summary="@string/preferences_spectrogram_smooth_render_text"
            android:title="@string/preferences_spectrogram_smooth_render_title"/>

        <ListPreference
            android:defaultValue="@string/db_color_map_default"
            android:entries="@array/db_color_map_entries"
            android:entryValues="@array/db_color_map"
            android:key="spectrogramColorMap"
            android:summary="@string/preferences_spectrogram_color_map_text"
            android:title="@string/preferences_spectrogram_color_map_title"/>
        <ListPreference
            android:defaultValue="@string/db_ranges_spectrogram_default"
            android:entries="@array/db_ranges"
            android:entryValues="@array/db_ranges"
            android:key="spectrogramRange"
            android:summary="@string/preferences_spectrogram_range_text"
            android:title="@string/preferences_spectrogram_range_title"/>
        <ListPreference
            android:defaultValue="@string/spectrogram_durations_default"
            android:entries="@array/spectrogram_durations"
            android:entryValues="@array/spectrogram_durations"
            android:key="spectrogramDuration"
            android:summary="@string/preferences_spectrogram_duration_text"
            android:title="@string/preferences_spectrogram_duration_title"/>
        <ListPreference
            android:defaultValue="@string/spectrogram_fps_default"
            android:entries="@array/spectrogram_fps"
            android:entryValues="@array/spectrogram_fps"
            android:key="spectrogramFPS"
            android:summary="@string/preferences_spectrogram_fps_text"
            android:title="@string/preferences_spectrogram_fps_title"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="miscellaneous"
        android:title="@string/preferences_miscellaneous">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="warnOverrun"
            android:summary="@string/preferences_warn_overrun_text"
            android:title="@string/preferences_warn_overrun_title"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="developerSetting"
        android:title="@string/preferences_developer_setting">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="spectrogramLogPlotMethod"
            android:summary="@string/preferences_spectrogram_log_plot_text"
            android:title="@string/preferences_spectrogram_log_plot_title"/>
    </PreferenceCategory>
</PreferenceScreen>
