<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    style="@style/WrapContent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding">

    <TextView
        android:id="@+id/tvRangesFreqInstructions"
        style="@style/WrapContent"
        android:text="@string/set_lower_and_upper_freq_bound"/>

    <TextView
        android:id="@+id/tvRangesFreqFromTo"
        style="@style/WrapContent"
        android:layout_below="@id/tvRangesFreqInstructions"
        android:layout_marginTop="10dp"
        android:text="@string/ranges_freq_from_to"/>

    <EditText
        android:id="@+id/etRangesFreqLowerBound"
        style="@style/EtRanges"
        android:layout_below="@id/tvRangesFreqFromTo"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/etRangesFreqUpperBound"
        style="@style/EtRanges"
        android:layout_below="@id/tvRangesFreqFromTo"
        android:layout_toEndOf="@id/etRangesFreqLowerBound"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/tvRangesDBInstructions"
        style="@style/WrapContent"
        android:layout_below="@+id/etRangesFreqUpperBound"
        android:layout_marginTop="30dp"
        android:text="@string/set_lower_and_upper_db_bound"/>

    <TextView
        android:id="@+id/tvRangesDBFromTo"
        style="@style/WrapContent"
        android:layout_below="@+id/tvRangesDBInstructions"
        android:layout_marginTop="10dp"
        android:text="@string/ranges_db_from_to"/>

    <EditText
        android:id="@+id/etRangesDBLowerBound"
        style="@style/EtRanges"
        android:layout_below="@+id/tvRangesDBFromTo"
        android:inputType="numberDecimal|numberSigned"/>

    <EditText
        android:id="@+id/etRangesDBUpperBound"
        style="@style/EtRanges"
        android:layout_below="@+id/tvRangesDBFromTo"
        android:layout_toEndOf="@id/etRangesFreqLowerBound"
        android:inputType="numberDecimal|numberSigned"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etRangesDBUpperBound"
        android:layout_marginTop="30dp">

        <CheckBox
            android:id="@+id/cbRangesLockRanges"
            style="@style/WrapContent"
            android:text="@string/lock_ranges"/>

        <Button
            android:id="@+id/btnRangesLoadPrevious"
            style="@style/WrapContent"
            android:layout_marginStart="20dp"
            android:text="@string/load_previous"/>
    </LinearLayout>
</RelativeLayout>